// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Container should match a snapshot for favorites route 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    addFavorite={[Function]}
    favorites={
        Array [
            Object {
              "id": 437670,
              "overview": "A comedy that follows an con who lands a position at a",
              "posterPath": "/cypnifmPJ5JbTjzpZI6MwJdvP7.jpg",
              "releaseDate": "2017-10-26",
              "title": "Suck Me Shakespeer 3",
              "voteAverage": 6.2,
            },
          ]
    }
    logStatus={true}
    match={
        Object {
            "path": "/favorites",
          }
    }
    movies={
        Array [
            Object {
              "id": 437670,
              "overview": "A comedy that follows an con who lands a position at a",
              "posterPath": "/cypnifmPJ5JbTjzpZI6MwJdvP7.jpg",
              "releaseDate": "2017-10-26",
              "title": "Suck Me Shakespeer 3",
              "voteAverage": 6.2,
            },
          ]
    }
    user={Object {}}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Unknown
          addFavorite={[Function]}
          information={
                    Object {
                              "id": 437670,
                              "overview": "A comedy that follows an con who lands a position at a",
                              "posterPath": "/cypnifmPJ5JbTjzpZI6MwJdvP7.jpg",
                              "releaseDate": "2017-10-26",
                              "title": "Suck Me Shakespeer 3",
                              "voteAverage": 6.2,
                            }
          }
          logStatus={true}
/>,
      ],
      "className": "card-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "437670",
        "nodeType": "function",
        "props": Object {
          "addFavorite": [Function],
          "information": Object {
            "id": 437670,
            "overview": "A comedy that follows an con who lands a position at a",
            "posterPath": "/cypnifmPJ5JbTjzpZI6MwJdvP7.jpg",
            "releaseDate": "2017-10-26",
            "title": "Suck Me Shakespeer 3",
            "voteAverage": 6.2,
          },
          "logStatus": true,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Unknown
            addFavorite={[Function]}
            information={
                        Object {
                                    "id": 437670,
                                    "overview": "A comedy that follows an con who lands a position at a",
                                    "posterPath": "/cypnifmPJ5JbTjzpZI6MwJdvP7.jpg",
                                    "releaseDate": "2017-10-26",
                                    "title": "Suck Me Shakespeer 3",
                                    "voteAverage": 6.2,
                                  }
            }
            logStatus={true}
/>,
        ],
        "className": "card-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "437670",
          "nodeType": "function",
          "props": Object {
            "addFavorite": [Function],
            "information": Object {
              "id": 437670,
              "overview": "A comedy that follows an con who lands a position at a",
              "posterPath": "/cypnifmPJ5JbTjzpZI6MwJdvP7.jpg",
              "releaseDate": "2017-10-26",
              "title": "Suck Me Shakespeer 3",
              "voteAverage": 6.2,
            },
            "logStatus": true,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Card Container should match the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    addFavorite={[Function]}
    favorites={Array []}
    logStatus={true}
    match={
        Object {
            "path": "/",
          }
    }
    movies={
        Array [
            Object {
              "id": 437670,
              "overview": "A comedy that follows an con who lands a position at a",
              "posterPath": "/cypnifmPJ5JbTjzpZI6MwJdvP7.jpg",
              "releaseDate": "2017-10-26",
              "title": "Suck Me Shakespeer 3",
              "voteAverage": 6.2,
            },
          ]
    }
    user={Object {}}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Unknown
          addFavorite={[Function]}
          information={
                    Object {
                              "id": 437670,
                              "overview": "A comedy that follows an con who lands a position at a",
                              "posterPath": "/cypnifmPJ5JbTjzpZI6MwJdvP7.jpg",
                              "releaseDate": "2017-10-26",
                              "title": "Suck Me Shakespeer 3",
                              "voteAverage": 6.2,
                            }
          }
          logStatus={true}
/>,
      ],
      "className": "card-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "437670",
        "nodeType": "function",
        "props": Object {
          "addFavorite": [Function],
          "information": Object {
            "id": 437670,
            "overview": "A comedy that follows an con who lands a position at a",
            "posterPath": "/cypnifmPJ5JbTjzpZI6MwJdvP7.jpg",
            "releaseDate": "2017-10-26",
            "title": "Suck Me Shakespeer 3",
            "voteAverage": 6.2,
          },
          "logStatus": true,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Unknown
            addFavorite={[Function]}
            information={
                        Object {
                                    "id": 437670,
                                    "overview": "A comedy that follows an con who lands a position at a",
                                    "posterPath": "/cypnifmPJ5JbTjzpZI6MwJdvP7.jpg",
                                    "releaseDate": "2017-10-26",
                                    "title": "Suck Me Shakespeer 3",
                                    "voteAverage": 6.2,
                                  }
            }
            logStatus={true}
/>,
        ],
        "className": "card-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "437670",
          "nodeType": "function",
          "props": Object {
            "addFavorite": [Function],
            "information": Object {
              "id": 437670,
              "overview": "A comedy that follows an con who lands a position at a",
              "posterPath": "/cypnifmPJ5JbTjzpZI6MwJdvP7.jpg",
              "releaseDate": "2017-10-26",
              "title": "Suck Me Shakespeer 3",
              "voteAverage": 6.2,
            },
            "logStatus": true,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
